Implemented Navbar Layout

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+html,
+body
+    height: 100%
+    padding: 0
+    margin: 0
+    box-sizing: border-box
+
+.bg-primary
+    background-color: #165C7D
+.bg-secondary
+    background-color: #FFA300
+
+.bg-blue-light
+    background-color: #009ED0
+.bg-green
+    background-color: #00C246
+.bg-blue-middle
+    background-color: #007D8A
