Primeiro dia de desenvolvimento do Teste de Angular AmCom

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar bg-primary">
+<nav class="navbarContainer bg-primary">
     <figure>
         <div pRipple>
             <fa-icon [icon]="logo"></fa-icon>
