--- a/src/app/layout/navbar/navbar.component.sass
+++ b/src/app/layout/navbar/navbar.component.sass
@@ -3,7 +3,7 @@
     justify-content: center
     align-items: center
 
-.navbar
+.navbarContainer
     height: 100%
     color: white
 
@@ -52,8 +52,8 @@
     &::after
         content: '...'
         position: relative
-        bottom: 12px
-        right: 26px
+        bottom: 13px
+        right: 24px
 
 .panel
     padding: 2px
