--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,19 +1,17 @@
+@use './styles/buttons'
+@use './styles/colors'
+@use './styles/input'
+
 /* You can add global styles to this file, and also import other style files */
+@font-face
+    font-family: Exo2
+    src: url("./assets/Exo_2/Exo2-Italic-VariableFont_wght.ttf") format(truetype)
+    src: url("./assets/Exo_2/Exo2-VariableFont_wght.ttf") format(truetype)
+
 html,
 body
     height: 100%
     padding: 0
     margin: 0
     box-sizing: border-box
-
-.bg-primary
-    background-color: #165C7D
-.bg-secondary
-    background-color: #FFA300
-
-.bg-blue-light
-    background-color: #009ED0
-.bg-green
-    background-color: #00C246
-.bg-blue-middle
-    background-color: #007D8A
+    font-family: Exo2,
