--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,6 +1,8 @@
-@use './styles/buttons'
-@use './styles/colors'
-@use './styles/input'
+@use './styles/_buttons'
+@use './styles/_colors'
+@use './styles/_input'
+@use './styles/_aimates'
+@use './styles/_margins-paddings-size'
 
 /* You can add global styles to this file, and also import other style files */
 @font-face
