--- a/src/styles/_input.sass
+++ b/src/styles/_input.sass
@@ -3,3 +3,6 @@
     border-radius: 2px
     background-color: white
     height: 35px !important
+
+.input-invalid
+    border: 1px solid red !important
