--- a/src/styles/_buttons.sass
+++ b/src/styles/_buttons.sass
@@ -32,6 +32,21 @@
             border-color: #023D55
         &:focus-visible
             border-color: #009ED0
+    
+    &-link
+        background-color: transparent
+        border: 1px solid transparent
+        text-decoration: underline
+        font-weight: 600
+        color: #165C7D
+        cursor: pointer
+
+    &-disabled
+        @include btn
+        background-color: #A2BECB
+        color: white
+        border: 1px solid transparent
+        cursor: not-allowed
          
 .btn-p
     height: 32px
