--- a/src/app/pages/documents/documents.component.html
+++ b/src/app/pages/documents/documents.component.html
@@ -14,10 +14,10 @@
     </p>
 
     <section class="cardUploadArea">
-        <app-card-upload></app-card-upload>
-        <app-card-upload></app-card-upload>
-        <app-card-upload></app-card-upload>
-        <app-card-upload></app-card-upload>
+        <app-card-upload title="Identificação (frente)" subTitle="Obrigatório" [optional]="true" ></app-card-upload>
+        <app-card-upload title="Identificação (verso)" subTitle="Obrigatório" [optional]="true" ></app-card-upload>
+        <app-card-upload title="Comprovante de residência" subTitle="Obrigatório" [optional]="true" ></app-card-upload>
+        <app-card-upload title="Comprovante de renda" subTitle="Opcional" ></app-card-upload>
     </section>
 
     <hr class="divider mt-24">
