--- a/src/app/pages/nova-admissao-cooperado/nova-admissao-cooperado.component.html
+++ b/src/app/pages/nova-admissao-cooperado/nova-admissao-cooperado.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-    <app-steps></app-steps>
+    <p-steps [model]="items" [activeIndex]="stepActiveIndex"></p-steps>
 </div>
 
 <div class="mainContainer">
