--- a/src/app/pages/nova-admissao-cooperado/nova-admissao-cooperado.component.sass
+++ b/src/app/pages/nova-admissao-cooperado/nova-admissao-cooperado.component.sass
@@ -7,5 +7,12 @@
     justify-content: flex-start
     align-items: stretch
 
-.p-steps, .p-component, .p-readonly
-    background-color: red
+.header
+    display: flex
+    justify-content: center
+    align-items: center
+    margin: 0 auto
+    padding: 15px 15px 0
+
+    >*
+        width: 50rem
