--- a/src/styles.sass
+++ b/src/styles.sass
@@ -17,3 +17,6 @@ body
     margin: 0
     box-sizing: border-box
     font-family: Exo2,
+
+.p-menuitem-link
+    background-color: transparent !important
