--- a/src/styles/_colors.sass
+++ b/src/styles/_colors.sass
@@ -16,5 +16,11 @@
 .text-danger
     color: red
 
+.text-secondary
+    color: #FFA300
+
+.text-gray
+    color: #787878
+
 *
     accent-color: orange
