--- a/src/app/layout/header/header.component.sass
+++ b/src/app/layout/header/header.component.sass
@@ -3,6 +3,50 @@
 
 .headerContainer
     padding: 19px 24px
-    
+    display: grid
+    grid-template-areas: "title rightMenu" "breadcrumb rightMenu"
+    grid-template-columns: 1fr auto
+
     h1
+        grid-area: title
         font-size: 24px
+
+    p-breadcrumb
+        grid-area: breadcrumb
+
+    div.menu
+        grid-area: rightMenu
+        column-gap: 15px
+        display: flex
+        height: 100%
+        justify-content: center
+        align-items: center
+        
+        fa-icon.bell
+            font-size: 24px
+            color: #125D79
+
+        .collaborator
+            border: 1px solid #125D79
+            padding: 10px 20px
+            border-radius: 24px
+            font-weight: 700
+            color: #125D79
+
+        .avatarContainer
+            color: #125D79
+            position: relative
+
+            img
+                width: 40px
+                border: 1px solid #125D79
+                border-radius: 50%
+
+            .steam
+                position: absolute
+                bottom: 0
+                right: -2px
+        
+        
+
+        
